<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/shape_dialog"
    android:padding="20dp">

    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/imgFB"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_launcher_background"
        app:civ_border="true"
        android:visibility="gone" />

    <TextView
        android:visibility="gone"
        android:id="@+id/txFB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/app_name"
        android:textColor="@color/black" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_height="80dp"
        android:layout_margin="5dp"/>

    <Button
        android:layout_margin="5dp"
        android:visibility="gone"
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/style_bottom"
        android:text="@string/logout"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="13sp" />

    <Button
        android:layout_margin="5dp"
        android:id="@+id/share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/style_bottom"
        android:text="@string/share"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="13sp" />


    <Button
        android:layout_margin="5dp"
        android:id="@+id/comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/style_bottom"
        android:text="@string/comment"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="13sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_margin="5dp"
            android:id="@+id/dismiss"
            android:layout_weight="1"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/style_bottom"
            android:text="@string/dismiss"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:layout_marginBottom="5dp"/>
        <Button
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:id="@+id/exit"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/style_bottom"
            android:text="@string/exit"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:layout_marginBottom="5dp"/>
    </LinearLayout>


</LinearLayout>