<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".AddNote">

    <LinearLayout
        android:id="@+id/layout2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/style_toolbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp">


            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:drawableLeft="@drawable/back"
                android:gravity="center_vertical"
                android:text="@string/date"
                android:textColor="#607D8B"
                android:textSize="11sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:alpha="0.5"
                android:padding="6dp"
                android:text="@string/save"
                android:textColor="@android:color/darker_gray"
                android:textSize="15sp" />


        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_below="@id/layout2"
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"

        android:orientation="horizontal"
        android:layout_marginBottom="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >


           <EditText
               android:id="@+id/subject"
               android:inputType="text"
               android:maxLength="20"
               android:maxLines="1"
               android:gravity="center"
               android:textColor="#607D8B"
               android:background="@drawable/style_toolbar"
               android:imeOptions="actionNext"
               android:textSize="14sp"
               android:layout_centerInParent="true"
               android:layout_width="match_parent"
               android:layout_height="40dp"
               android:hint="@string/note"/>


        </RelativeLayout>

    </LinearLayout>


    <EditText
        android:maxEms="40"
        android:maxLines="50"
        android:textSize="12sp"
        android:id="@+id/note"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/layout1"
        android:layout_below="@+id/layout"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/style_toolbar"
        android:gravity="top|left"
        android:inputType="text"
        android:padding="5dp"
        android:scrollbars="vertical"
        android:textColor="#607D8B"
        android:hint="@string/note_a" />






    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/style_toolbar"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image"
            android:src="@drawable/image"
            android:layout_gravity="center"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_weight="1" />

        <TextView

            android:gravity="center"
            android:layout_gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_weight="0.5"
            android:text="@string/or"/>

        <ImageView
            android:id="@+id/align"
            android:padding="5dp"
            android:src="@drawable/align"
            android:layout_gravity="center"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_weight="1" />


    </LinearLayout>


</RelativeLayout>